# shimmer

./: .flake8  .gitignore  .swp  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: dispatch-internal-pr-in-public.yml  dispatch-public-commits.yml  docs-new-release.yml  docs.yml  fetch-internal-branch.yml  fetch-public-commits.yml  quality.yml  tests.yml
config/: .gitignore
docs/: ckpt_migrations.md  index.html.jinja2  installation.md  make.py  q_and_a.md  shimmer_basics.md  usage_example.md
docs/api/: .gitignore  domain_modules.md  loss_output.md
docs/api/v0.5.0/: search.js
docs/api/v0.5.0/shimmer/cli/: ckpt_migration.html
docs/api/v0.5.0/shimmer/modules/: selection.html  utils.html  vae.html
docs/api/v0.5.1/: index.html
docs/api/v0.5.1/shimmer/: dataset.html  types.html  utils.html
docs/api/v0.5.1/shimmer/modules/: contrastive_loss.html  domain.html  global_workspace.html  gw_module.html  losses.html
examples/imgnet_example/: .gitignore  dataset.py  domains.py  get_embed.py  get_new_captions.py  get_sd_embed.py  imnet_logging.py  inference_infusion.py  inference_translation.py  logging_test.py  noise_regularisation.py  normalize_embeddings.py  reg_expe.py  temp_uniteembeddings.py  test_captions.py  test_indices.py  test_load_model.py  test_loading_classes.py  train_domain_module.py  train_gw.py  vae.py
examples/main_example/: dataset.py  domains.py  train_domain_module.py  train_gw.py
examples/main_example/checkpoints/: domain1.ckpt  domain2.ckpt  gw.ckpt
examples/main_example/lightning_logs/version_3/checkpoints/: epoch=3-step=16.ckpt
examples/main_example/lightning_logs/version_4/: metrics.csv
examples/main_example/lightning_logs/version_4/checkpoints/: epoch=3-step=16.ckpt
examples/main_example/path/to/checkpoint/dir/: epoch=3.ckpt
old_docs/: shimmer_basics.md
old_docs/api/shimmer/: dataset.md  index.md  version.md
old_docs/api/shimmer/modules/: domain.md  global_workspace.md  gw_module.md  index.md  losses.md  vae.md
old_docs/old_api/: losses.md
shimmer/: __init__.py  config.py  dataset.py  types.py  utils.py  version.py
shimmer/ckpt_migrations/: 2_del_gw_interfaces_hparam.py
shimmer/cli/: __init__.py  ckpt_migration.py
shimmer/data/: __init__.py  dataset.py  domain.py  types.py
shimmer/modules/: __init__.py  attention.py  attention_module.py  contrastive_loss.py  dict_buffer.py  domain.py  global_workspace.py  gw_module.py  losses.py  selection.py  utils.py  vae.py
shimmer/modules/lightning/: global_workspace.py
shimmer/stubs/: info_nce.pyi
tests/: config.py  save_model.py  test_attention_training.py  test_broadcast.py  test_ckpt_migrations.py  test_freeze_domains.py  test_kq_onepass_attention.py  test_query_attention.py  test_random_attention.py  test_single_domain_selection.py  test_training.py  test_uncertainty_modules.py  test_with_confidence_modules.py  utils.py
tests/data/: old_gw.ckpt  old_gw_2_domains.ckpt
