[tool.poetry]
name = "shimmer"
version = "0.4.0"
description = "A light GLoW"
authors = ["bdvllrs <bdvllrs@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
lightning = "^2.1.0"
numpy = "^1.25"
pandas = "^2.0.2"
matplotlib = "^3.7.1"

[tool.poetry.group.dev.dependencies]
types-tqdm = "^4.65.0.1"
lxml-stubs = "^0.4.0"
pandas-stubs = "^2.0.2.230605"
types-pillow = "^9.5.0.4"
types-pywin32 = "^306.0.0.2"
types-setuptools = "^67.8.0.0"
types-tabulate = "^0.9.0.2"
types-dataclasses = "^0.6.6"
mypy = "^1.4.0"
ruff = "^0.3.0"
pre-commit = "^3.6.2"

[tool.poetry.group.test.dependencies]
torchvision = "^0.15.2"
pytest = "^7.3.2"

[tool.poetry.group.docs.dependencies]
pdoc = "^14.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
ignore_missing_imports = true
install_types = true
check_untyped_defs = true


[tool.ruff]
target-version = "py311"
extend-exclude = [
    "__pycache__",
    ".mypy_cache",
    "docs",
    ".github",
]

[tool.ruff.format]
docstring-code-format = true


[tool.pyright]
# reportIncompatibleMethodOverride = "none"
