[tool.poetry]
name = "shimmer"
version = "0.6.0.dev"
description = "A light GLoW"
authors = ["bdvllrs <bdvllrs@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
numpy = "^1.26"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
migrate-ckpt = {git = "https://github.com/bdvllrs/migrate-ckpt.git", rev = "v0.2.0"}
click = "^8.1.7"
lightning = "^2.3.3"
torch = "^2.0.1"

[tool.poetry.group.dev.dependencies]
types-tqdm = "^4.65.0.1"
lxml-stubs = "^0.5.1"
pandas-stubs = "^2.0.2.230605"
types-pillow = "^10.2.0.20240520"
types-pywin32 = "^306.0.0.2"
types-setuptools = "^74.1.0.20240907"
types-tabulate = "^0.9.0.2"
types-dataclasses = "^0.6.6"
types-pyyaml = "^6.0.12.20240808"
mypy = "^1.10.0"
ruff = "^0.6.3"
pre-commit = "^3.7.1"
types-protobuf = "^5.27.0.20240907"
types-redis = "^4.6.0.20240903"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
pdoc = "^14.6.1"

[tool.poetry.scripts]
shimmer = "shimmer.cli:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
ignore_missing_imports = true
install_types = true
check_untyped_defs = true
exclude = ["examples/*"]


[tool.ruff]
target-version = "py311"
extend-exclude = [
    "__pycache__",
    ".mypy_cache",
    "docs/api",
    ".github",
]

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "B", "SIM", "I"]

[tool.ruff.format]
docstring-code-format = true


[tool.pyright]
# reportIncompatibleMethodOverride = "none"
