[project]
name = "shimmer"
version = "0.6.0.dev"
description = "A light GLoW"
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "Benjamin Devillers", email="bdvllrs@gmail.com" },
]
maintainers = [
    { name = "Benjamin Devillers", email="bdvllrs@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "numpy (>=1.26.0,<2.0.0)",
    "pandas (>=2.2.2,<3.0.0)",
    "matplotlib (>=3.9.1,<4.0.0)",
    "migrate-ckpt @ git+https://github.com/bdvllrs/migrate-ckpt.git@v0.2.0",
    "click (>=8.1.7,<9.0.0)",
    "lightning (>=2.1.0,<3.0.0)",
    "torch (>=2.0.1,<3.0.0)",
]


[project.scripts]
shimmer = "shimmer.cli:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
mypy = "^1.12.1"
ruff = "^0.7.0"
pre-commit = "^4.0.1"
pdoc = "^15.0.0"
types-tqdm = "^4.65.0.1"
lxml-stubs = "^0.5.1"
pandas-stubs = "^2.2.3.241009"
types-pillow = "^10.2.0.20240520"
types-pywin32 = "^308.0.0.20241015"
types-setuptools = "^75.2.0.20241019"
types-tabulate = "^0.9.0.2"
types-dataclasses = "^0.6.6"
types-pyyaml = "^6.0.12.20240808"
types-protobuf = "^5.28.0.20240924"
types-redis = "^4.6.0.20241004"
types-python-dateutil = "^2.9.0.20241206"
types-six = "^1.17.0.20241205"



[tool.mypy]
ignore_missing_imports = true
install_types = true
check_untyped_defs = true
exclude = ["examples/*"]


[tool.ruff]
target-version = "py311"
extend-exclude = [
    "__pycache__",
    ".mypy_cache",
    "docs/api",
    ".github",
]

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "B", "SIM", "I"]

[tool.ruff.format]
docstring-code-format = true


[tool.pyright]
# reportIncompatibleMethodOverride = "none"
